# ferment

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  clippy.toml  rust-toolchain.toml
ferment/: Cargo.toml
ferment-example/: Cargo.toml  build.backup  build.rs
ferment-example-nested/: Cargo.toml  build.rs
ferment-example-nested/src/: fermented.rs  fermented.sample.rs  lib.rs
ferment-example-nested/src/model/: callback.rs  mod.rs  snapshot.rs  tuples.rs
ferment-example-platform/: Cargo.toml  build.rs
ferment-example-platform/src/: custom.rs  fermented.rs  fermented_backup.rs  lib.rs
ferment-example-platform/src/custom/: anyhow.rs  dashcore.rs  dpp.rs  grovedb_version.rs  jsonschema.rs  mod.rs  platform_value.rs  regex.rs  serde_json.rs
ferment-example-traits/: Cargo.toml  build.backup  tmp.txt
ferment-example-traits-nested/: Cargo.toml  build.rs
ferment-example-traits-nested/src/: fermented.rs  lib.rs
ferment-example-traits/src/: fermented.rs  lib.rs
ferment-example-traits/src/from_proof/: from_proof.rs
ferment-example-traits/src/transport/: mod.rs  transport_request.rs
ferment-example/aliasing/: Cargo.toml  build.rs  cbindgen.toml
ferment-example/aliasing/src/: fermented.rs  lib.rs
ferment-example/app/: Cargo.toml
ferment-example/app/src/: fermented.rs  lib.rs
ferment-example/dashcore/: Cargo.toml  build.rs  cbindgen.toml
ferment-example/dashcore/src/: fermented.rs  lib.rs
ferment-example/entry-point/: Cargo.toml  build.rs
ferment-example/entry-point/src/: fermented.rs  lib.rs  wallet.rs  wallet_provider.rs
ferment-example/entry-point/tests/: async_chain_provider.rs  async_context_smokes.rs  async_smokes.rs  ffi_async_coinjoin.rs
ferment-example/nested/: Cargo.toml  build.rs  build.sh  cbindgen.toml
ferment-example/nested/src/: fermented.rs  fermented_sample.rs  lib.rs  sync_state.rs
ferment-example/nested/tests/: callback.rs  chained_callbacks.rs  chained_structs.rs  fermented_platform_value_smoke.rs  group.rs  map.rs  more_smokes.rs  result.rs  rich_smokes.rs
ferment-example/platform/: Cargo.toml  build.rs  cbindgen.toml
ferment-example/platform/src/: fermented.rs  lib.rs
ferment-example/simple/: Cargo.toml  cbindgen.toml
ferment-example/simple/src/: lib.rs
ferment-example/src/: fermented.rs  fermented_backup.rs  fermented_sample.rs  lib.rs
ferment-example/src/asyn/: dapi_client.rs  dapi_request.rs  fetch.rs  mock.rs  mod.rs  platform_version.rs  proof.rs  provider.rs  query.rs  sdk.rs  service.rs
ferment-example/src/data_contract/: mod.rs
ferment-example/src/errors/: mod.rs  protocol_error.rs
ferment-example/src/example/: address.rs  custom_conversion.rs
ferment-example/src/identity/: identity.rs  identity_request.rs  mod.rs
ferment-example/src/state_transition/: mod.rs
ferment-example/src/traits/: complex.rs  mod.rs  settings.rs
ferment-example/src/tuple/: mod.rs  tuple_in_functions.rs
ferment-example/src/types/: mod.rs  slices.rs  tuple_in_functions.rs
ferment-example/thread-safe/: Cargo.toml  build.rs
ferment-example/thread-safe/src/: fermented.rs  lib.rs
ferment-example/traits/: Cargo.toml  build.backup
ferment-example/traits-nested/: Cargo.toml  build.rs
ferment-example/traits-nested/src/: fermented.rs  lib.rs
ferment-example/traits/src/: lib.rs
ferment-sys/: Cargo.toml
ferment-sys/src/: builder.rs  cbindgen.rs  config.rs  error.rs  formatter.rs  lib.rs  shared.rs  writer.rs
ferment-sys/src/ast/: mod.rs  opposed.rs  path_holder.rs  sequence.rs  type_holder.rs  typepath_holder.rs  wrapped.rs
ferment-sys/src/composable/: attrs.rs  field_type.rs  function.rs  generic.rs  generic_bounds.rs  import.rs  mod.rs  nested_arg.rs  qself.rs  trait_model.rs  traits.rs  type_composition.rs  type_model.rs
ferment-sys/src/composer/: any_other.rs  arc_composer.rs  array.rs  attr_type.rs  attrs.rs  bare_fn.rs  basic.rs  bounds.rs  callback.rs  constants.rs  conversion_drop.rs  conversion_from.rs  conversion_to.rs  destroy_conversion.rs  doc.rs  enum.rs  enum_composer.rs  enum_variant.rs  ffi_bindings.rs  ffi_conversions.rs  ffi_full_path.rs  from_conversion.rs  generic.rs  generics.rs  generics_composer.rs  group.rs  impl.rs  impl_fn.rs  item.rs  item_wrapper.rs  lifetimes.rs  map.rs  method.rs  mod.rs  mod_fn.rs  opaque_struct.rs  pat_type.rs  rc.rs  result.rs  scope_search.rs  (+18 more)
ferment-sys/src/context/: attrs_resolver.rs  custom_resolver.rs  generic_chain.rs  generic_resolver.rs  global_context.rs  import_resolver.rs  mod.rs  scope.rs  scope_chain.rs  scope_context.rs  scope_info.rs  scope_resolver.rs  scope_search.rs  scope_search_key.rs  traits_resolver.rs  type_chain.rs
ferment-sys/src/conversion/: dict.rs  dict_fermentable.rs  generic_type_conversion.rs  group.rs  import_conversion.rs  item_conversion.rs  local_type_conversion.rs  macro_conversion.rs  mod.rs  object_conversion.rs  opaque_conversion.rs  scope_item_conversion.rs  smart_pointer.rs  ty.rs  type_composition_conversion.rs  type_conversion.rs
ferment-sys/src/ext/: args_transform.rs  collection.rs  constraints.rs  generic_bound_key.rs  item.rs  maybe_args.rs  maybe_attrs.rs  maybe_generic_type.rs  maybe_generics.rs  maybe_ident.rs  maybe_trait_bound.rs  mod.rs  path_transform.rs  to_object_kind.rs
ferment-sys/src/kind/: callback.rs  dict_fermentable_model.rs  dict_type_model.rs  field_type.rs  generic_type.rs  group_model.rs  local_type.rs  macro.rs  mixin.rs  mod.rs  object.rs  scope_item.rs  smart_pointer.rs  smart_pointer_model.rs  special.rs  type.rs  type_model.rs
ferment-sys/src/lang/: mod.rs
ferment-sys/src/presentable/: arg.rs  argument.rs  aspect.rs  binding.rs  conversion_expression_kind.rs  (+5 more)
ferment/src/: builder.rs  chunk.rs  composer.rs  config.rs  context.rs  error.rs  ferment.rs  fermented.rs  formatter.rs  generic_path_conversion.rs  generics.rs  helper.rs  idents.rs  import_conversion.rs  interface.rs  item_conversion.rs  lib.rs  path_conversion.rs  presentation.rs  scope.rs  scope_conversion.rs  sequence.rs  shared.rs  trait_conversion.rs  type_conversion.rs  visitor.rs  wrapped.rs
(+653 files in other folders)
