[workspace]
members = [
    "ferment",
    "ferment-sys",
    "ferment-macro",
    "ferment-example/*",
]
resolver = "2"

[workspace.package]
authors = ["Vladimir Pirogov <vladimir.pirogov@dash.org>"]
description = "FFI bindings orchestrator"
homepage = "https://github.com/pankcuf/ferment"
license = "MIT"
keywords = ["ffi", "macro", "c-bindings", "syntax-tree"]
version = "0.2.0"

[workspace.dependencies]
ferment = { version = "0.2.0", path = "ferment" }
ferment-sys = { version = "0.2.0", path = "ferment-sys" }
ferment-macro = { version = "0.2.0", path = "ferment-macro" }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.build-override]
debug = true