[package]
name = "ferment-example-nested"
version = "0.1.4"
edition = "2021"
build = "build.rs"

[dependencies]
ferment-interfaces = { path = "../ferment-interfaces" }
ferment-macro = { path = "../ferment-macro" }
ferment-example = { path = "../ferment-example" }
platform-value = { path = "../../platform/packages/rs-platform-value" }
dpp = { path = "../../platform/packages/rs-dpp" }


[build-dependencies]
cbindgen = "0.26.0"
ferment = { path = "../ferment" }
toml = "0.8.8"

[lib]
name = "ferment_example_nested"
