[package]
name = "ferment-sys"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Syntax tree morphing of FFI-compatible stuff"

[features]
default = ["objc"]

objc = []
cbindgen_only = []
java = []

[dependencies]
ferment-macro.workspace = true

syn = { version = "1.0.109", features = ["default", "full", "visit", "extra-traits"] }
quote = "1.0.28"
proc-macro2 = "1.0.70"
cargo_metadata = "0.19.2"
env_logger = "0.11.0"
cbindgen = "0.28.0"

[lib]
name = "ferment_sys"
