[package]
name = "ferment-sys"
version = "0.2.10"
edition = "2021"
license = "MIT"
description = "Syntax tree morphing of FFI-compatible stuff"

[features]
default = ["cbindgen"]

objc = []
cbindgen = []
cbindgen_only = []
java = []

[dependencies]
ferment-macro.workspace = true

syn = { version = "2.0.104", features = ["default", "full", "visit", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
cargo_metadata = "0.20.0"
env_logger = "0.11"
cbindgen.workspace = true

[lib]
name = "ferment_sys"
