[package]
name = "example-aliasing"
version = "0.2.14"
edition = "2021"
build = "build.rs"
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
publish = false

[dependencies]
ferment.workspace = true
ferment-macro.workspace = true

[build-dependencies]
cbindgen.workspace = true
ferment-sys = { workspace = true, features = ["objc"]}

[features]

[lib]
name = "example_aliasing"