[package]
name = "example-entry-point"
version = "0.1.4"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
async-trait = "0.1.74"
ferment.workspace = true
ferment-macro.workspace = true

tokio = { version = "1.34", features = ["full"] }

[build-dependencies]
cbindgen.workspace = true
ferment-sys.workspace = true

[lib]
name = "example_entry_point"
