[package]
name = "example-nested"
version = "0.1.4"
edition = "2021"
build = "build.rs"

[dependencies]
ferment = { path = "../../ferment" }
ferment-macro = { path = "../../ferment-macro" }
example-simple = { path = "../simple" }
platform-value = { path = "../../../platform/packages/rs-platform-value" }
dpp = { path = "../../../platform/packages/rs-dpp" }


[build-dependencies]
cbindgen = "0.26.0"
ferment-sys = { path = "../../ferment-sys", features = ["objc"] }
toml = "0.8.8"

[lib]
name = "example_nested"
