[package]
name = "example-nested"
version = "0.1.4"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
anyhow = "1.0.95"
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple"], default-features = false, branch = "feat/ferment" }

ferment.workspace = true
ferment-macro.workspace = true

example-simple = { path = "../simple" }

dpp = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "dpp", default-features = false, features = ["apple", "dash-sdk-features"] }
platform-value = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-value", features = ["apple"] }
platform-version = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-version", features = ["apple"] }
versioned-feature-core = "1.0.0"

indexmap = "2.7.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"], optional = true }
serde_json = "1.0.85"

[build-dependencies]
cbindgen.workspace = true
ferment-sys.workspace = true
#ferment-sys = { path = "../../ferment-sys", features = ["objc"] }
#ferment-sys = { path = "../../ferment-sys", features = ["objc", "cbindgen_only"] }

[features]
default = ["state-transitions", "apple"]
apple = ["dpp/apple", "dashcore/apple", "example-simple/apple", "platform-value/apple", "platform-version/apple"]

bls-signatures = ["dpp/bls-signatures"]
blsful = ["dashcore/blsful"]
cbor = ["platform-value/cbor", "dpp/cbor", "dpp/ciborium"]
core-types = ["dpp/core-types"]
data-contract-cbor-conversion = ["dpp/data-contract-cbor-conversion"]
data-contract-json-conversion = ["dpp/data-contract-json-conversion"]
data-contract-value-conversion = ["dpp/data-contract-value-conversion"]
document-cbor-conversion = ["dpp/document-cbor-conversion"]
document-json-conversion = ["dpp/document-json-conversion"]
document-value-conversion = ["dpp/document-value-conversion"]
extended-document = ["dpp/extended-document"]
factories = ["dpp/factories"]
fee-distribution = ["dpp/fee-distribution"]
fixtures-and-mocks = ["dpp/fixtures-and-mocks"]
identity-cbor-conversion = ["dpp/identity-cbor-conversion"]
identity-json-conversion = ["dpp/identity-json-conversion"]
identity-value-conversion = ["dpp/identity-value-conversion"]
json = ["platform-value/serde_json"]
json-object = ["dpp/json-object"]
json-schema-validation = ["dpp/json-schema-validation"]
message-signing = ["dpp/message-signing"]
message_verification = ["dashcore/message_verification"]
mock-versions = ["platform-version/mock-versions"]
objc = ["ferment-sys/objc"]
cbindgen_only = ["ferment-sys/cbindgen_only"]
platform-value = ["dpp/platform-value"]
state-transitions = ["dpp/state-transitions"]
state-transition-json-conversion = ["dpp/state-transition-json-conversion"]
state-transition-validation = ["dpp/state-transition-validation"]
state-transition-signing = ["dpp/state-transition-signing"]
std = ["platform-value/std"]
system_contracts = ["dpp/system_contracts"]
validation = ["dpp/validation"]

[lib]
name = "example_nested"
crate-type = ["rlib", "staticlib", "cdylib"]
