[package]
name = "example-platform"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { version = "1.0.75" }
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple"], default-features = false, branch = "feat/ferment" }
ferment = { path = "../../ferment" }
ferment-macro = { path = "../../ferment-macro" }
grovedb-version = "2.1.0"
indexmap = { version = "2.0.2", features = ["serde"] }
jsonschema = "0.22.3"
dpp = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "dpp", features = ["state-transitions", "apple"] }
platform-value = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-value", features = ["apple"] }
platform-version = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-version", features = ["apple"] }
regex = { version = "1.10.4" }
serde_json = { version = "1.0", features = ["preserve_order"] }

[build-dependencies]
cbindgen = "0.27.0"
ferment-sys = { path = "../../ferment-sys", features = ["objc"] }
toml = "0.8.16"

[features]
cbor = ["platform-value/cbor", "dpp/cbor", "dpp/ciborium"]
data-contract-cbor-conversion = ["dpp/data-contract-cbor-conversion"]
data-contract-json-conversion = ["dpp/data-contract-json-conversion"]
data-contract-value-conversion = ["dpp/data-contract-value-conversion"]
document-cbor-conversion = ["dpp/document-cbor-conversion"]
document-json-conversion = ["dpp/document-json-conversion"]
document-value-conversion = ["dpp/document-value-conversion"]
extended-document = ["dpp/extended-document"]
factories = ["dpp/factories"]
fee-distribution = ["dpp/fee-distribution"]
fixtures-and-mocks = ["dpp/fixtures-and-mocks"]
identity-cbor-conversion = ["dpp/identity-cbor-conversion"]
identity-json-conversion = ["dpp/identity-json-conversion"]
identity-value-conversion = ["dpp/identity-value-conversion"]
json = ["platform-value/serde_json"]
json-object = ["dpp/json-object"]
json-schema-validation = ["dpp/json-schema-validation"]
message-signing = ["dpp/message-signing"]
mock-versions = ["platform-version/mock-versions"]
platform-value = ["dpp/platform-value"]
state-transitions = ["dpp/state-transitions"]
state-transition-json-conversion = ["dpp/state-transition-json-conversion"]
state-transition-validation = ["dpp/state-transition-validation"]
state-transition-signing = ["dpp/state-transition-signing"]
std = ["platform-value/std"]
validation = ["dpp/validation"]
core-types = ["dpp/core-types"]
system_contracts = ["dpp/system_contracts"]


[lib]
name = "example_platform"
