[package]
name = "example-platform"
version = "0.2.14"
edition = "2021"
build = "build.rs"
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { version = "1.0.75" }
dashcore = { git = "https://github.com/pankcuf/rust-dashcore", default-features = false, features = ["apple"], branch = "feat/ferment" }
ferment.workspace = true
ferment-macro.workspace = true
grovedb-version = "3.0.0"
indexmap = { version = "2.0.2", features = ["serde"] }
jsonschema = { git = "https://github.com/dashpay/jsonschema-rs", branch = "configure_regexp", default-features = false, features = [
    "draft202012",
], optional = true }
dpp = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", features = ["state-transitions", "apple"] }
platform-value = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", features = ["apple"] }
platform-version = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", features = ["apple"] }
versioned-feature-core = { version = "1.0.0" }
regex = { version = "1.10.4" }
serde_json = { version = "1.0", features = ["preserve_order"] }

[build-dependencies]
cbindgen.workspace = true
ferment-sys = { workspace = true, features = ["objc"]}

[features]
bls-signatures = ["dpp/bls-signatures"]
cbor = ["platform-value/cbor", "dpp/cbor", "dpp/ciborium"]
core2 = ["dashcore/core2"]
core-types = ["dpp/core-types"]
data-contract-cbor-conversion = ["dpp/data-contract-cbor-conversion"]
data-contract-json-conversion = ["dpp/data-contract-json-conversion"]
data-contract-value-conversion = ["dpp/data-contract-value-conversion"]
document-cbor-conversion = ["dpp/document-cbor-conversion"]
document-json-conversion = ["dpp/document-json-conversion"]
document-value-conversion = ["dpp/document-value-conversion"]
extended-document = ["dpp/extended-document"]
factories = ["dpp/factories"]
fee-distribution = ["dpp/fee-distribution"]
fixtures-and-mocks = ["dpp/fixtures-and-mocks"]
identity-cbor-conversion = ["dpp/identity-cbor-conversion"]
identity-json-conversion = ["dpp/identity-json-conversion"]
identity-value-conversion = ["dpp/identity-value-conversion"]
json = ["platform-value/serde_json"]
json-object = ["dpp/json-object"]
json-schema-validation = ["dpp/json-schema-validation"]
message-signing = ["dpp/message-signing"]
message_verification = ["dashcore/message_verification"]
mock-versions = ["platform-version/mock-versions"]
platform-value = ["dpp/platform-value"]
serde = ["dashcore/serde"]
state-transitions = ["dpp/state-transitions"]
state-transition-json-conversion = ["dpp/state-transition-json-conversion"]
state-transition-validation = ["dpp/state-transition-validation"]
state-transition-signing = ["dpp/state-transition-signing"]
std = ["platform-value/std"]
system_contracts = ["dpp/system_contracts"]
validation = ["dpp/validation"]
withdrawals-contract = ["dpp/withdrawals-contract"]

[lib]
name = "example_platform"