[package]
name = "example-simple"
version = "0.1.4"
edition = "2021"
#build = "build.backup"

[features]
default = ["apple"]
apple = []

[dependencies]
async-trait = "0.1.74"
ferment = { path = "../../ferment" }
ferment-macro = { path = "../../ferment-macro" }
tokio = { version = "1.34", features = ["full"] }

[build-dependencies]
cbindgen = "0.27.0"
ferment-sys = { path = "../../ferment-sys" }


[lib]
name = "example_simple"
