[package]
name = "example-simple"
version = "0.1.4"
edition = "2021"
publish = false
#build = "build.backup"

[features]
default = ["apple"]
apple = []

[dependencies]
ferment.workspace = true
ferment-macro.workspace = true
tokio = { version = "1.34", features = ["full"] }

[lib]
name = "example_simple"
