[package]
name = "example-traits-nested"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ferment.workspace = true
ferment-macro.workspace = true

example-traits = { path = "../traits" }

[build-dependencies]
cbindgen = "0.28.0"
ferment-sys.workspace = true
toml = "0.8.8"

[lib]
name = "example_traits_nested"
