[package]
name = "example-traits-nested"
version = "0.2.14"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
ferment.workspace = true
ferment-macro.workspace = true

example-traits = { path = "../traits" }

[build-dependencies]
cbindgen.workspace = true
ferment-sys.workspace = true
toml = "0.8.8"

[lib]
name = "example_traits_nested"
