[package]
name = "example-traits"
version = "0.1.0"
edition = "2021"
#build = "build.backup"
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1.74"
ferment = { path = "../../ferment" }
ferment-macro = { path = "../../ferment-macro" }
tokio = { version = "1.34", features = ["full"] }

[build-dependencies]
cbindgen = "0.27.0"
ferment-sys = { path = "../../ferment-sys" }


[lib]
name = "example_traits"
