[package]
name = "example-traits"
version = "0.1.0"
edition = "2021"
#build = "build.backup"
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
publish = false

[dependencies]
async-trait = "0.1.74"
ferment.workspace = true
ferment-macro.workspace = true
tokio = { version = "1.34", features = ["full"] }

[build-dependencies]
cbindgen = "0.28.0"
ferment-sys.workspace = true


[lib]
name = "example_traits"
